# sku

./: .gitignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  CLAUDE.md  Dockerfile.goreleaser  Makefile  NOTICE  README.md  go.mod  go.sum  main.go  manifest.json
pipeline/: Makefile  pyproject.toml
pipeline/catalog_profiler/: __main__.py  aws.py  azure.py  gcp.py  report.py  types.py
pipeline/discover/: __main__.py  _shards_gen.py  aws.py  azure.py  driver.py  gcp.py  openrouter.py  state.py
pipeline/ingest/: _azure_service_bus_common.py  _duckdb.py  _etag_cache.py  _gcp_pubsub_common.py  aws_api_gateway.py  aws_aurora.py  aws_cloudfront.py  aws_common.py  aws_dynamodb.py  aws_ebs.py  aws_ec2.py  aws_eks.py  aws_elasticache.py  aws_lambda.py  aws_opensearch.py  aws_rds.py  aws_route53.py  aws_s3.py  aws_sns.py  aws_sqs.py  azure_aks.py  azure_apim.py  azure_appservice.py  azure_blob.py  azure_common.py  azure_cosmosdb.py  azure_db_common.py  azure_disks.py  azure_event_hubs.py  azure_front_door.py  azure_functions.py  azure_mariadb.py  azure_mysql.py  azure_postgres.py  azure_redis.py  azure_service_bus_queues.py  azure_service_bus_topics.py  azure_sql.py  azure_vm.py  gcp_bigquery.py  (+17 more)
pipeline/normalize/: cdn_locations.py  enums.py  enums.yaml  regions.yaml  terms.py  terms_defaults.yaml  tier_tokens.py
pipeline/package/: budgets.py  build_delta.py  build_manifest.py  build_shard.py  sanity_check.py  schema.sql
pipeline/shards/: __init__.py  aws_api_gateway.yaml  aws_aurora.yaml  aws_cloudfront.yaml  aws_dynamodb.yaml  aws_ebs.yaml  aws_ec2.yaml  aws_eks.yaml  aws_elasticache.yaml  aws_lambda.yaml  aws_opensearch.yaml  aws_rds.yaml  aws_route53.yaml  aws_s3.yaml  aws_sns.yaml  aws_sqs.yaml  azure_aks.yaml  azure_apim.yaml  azure_appservice.yaml  azure_blob.yaml  azure_cosmosdb.yaml  azure_disks.yaml  azure_event_hubs.yaml  azure_front_door.yaml  azure_functions.yaml  azure_mariadb.yaml  azure_mysql.yaml  azure_postgres.yaml  azure_redis.yaml  azure_service_bus_queues.yaml  azure_service_bus_topics.yaml  azure_sql.yaml  azure_vm.yaml  gcp_bigquery.yaml  gcp_cloud_cdn.yaml  gcp_cloud_dns.yaml  gcp_cloud_sql.yaml  gcp_firestore.yaml  gcp_functions.yaml  gcp_gce.yaml  (+8 more)
pipeline/testdata/aws_api_gateway/: offer.json
pipeline/testdata/aws_aurora/: offer.json
pipeline/testdata/aws_cloudfront/: offer.json
pipeline/testdata/aws_dynamodb/: offer.json
pipeline/tests/: _tier_contiguity.py  test_aws_api_gateway_ingest.py  test_aws_aurora_ingest.py  test_aws_cloudfront_ingest.py  test_aws_common.py  test_aws_dynamodb_ingest.py  test_aws_ebs_ingest.py  test_aws_ec2_ingest.py  test_aws_eks_ingest.py  test_aws_elasticache_ingest.py  test_aws_etag_304.py  test_aws_fetch.py  test_aws_lambda_ingest.py  test_aws_opensearch_ingest.py  test_aws_rds_ingest.py  test_aws_route53_ingest.py  test_aws_s3_ingest.py  test_aws_sns_ingest.py  test_aws_sqs_ingest.py  test_aws_strip.py  test_azure_aks_ingest.py  test_azure_apim_ingest.py  test_azure_appservice_ingest.py  test_azure_blob_ingest.py  test_azure_common.py  test_azure_cosmosdb_ingest.py  test_azure_disks_ingest.py  test_azure_event_hubs_ingest.py  test_azure_fetch.py  test_azure_front_door_ingest.py  test_azure_functions_ingest.py  test_azure_mariadb_ingest.py  test_azure_mysql_ingest.py  test_azure_postgres_ingest.py  test_azure_redis_ingest.py  test_azure_service_bus_common.py  test_azure_service_bus_queues_ingest.py  test_azure_service_bus_topics_ingest.py  test_azure_sql_ingest.py  test_azure_vm_ingest.py  (+54 more)
pipeline/tools/: gen_python.py
pipeline/validate/: __main__.py  aws.py  azure.py  driver.py  gcp.py  openrouter.py  sampler.py  vantage.py
python/: MANIFEST.in  README.md  pyproject.toml
python/sku_cli/: __main__.py
(+534 files in other folders)
