[project]
name = "sku-pipeline"
version = "0.0.0"
description = "sku data pipeline (CI-only; not published)"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32",
  "pyyaml>=6.0",
  "zstandard>=0.22",
  "duckdb>=0.10,<2",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools]
packages = ["ingest", "normalize", "package"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
